examples/errors/call_stack_underflow.pigsh
# 错误：空调用栈执行 ret
ret
